(lang dune 3.11)

(name ocaml_textfile_concat)

(generate_opam_files true)

(source
 (github backspace-phill/ocaml-textfile-concat))

(authors "backspace-phill")

(license MIT)


(package
 (name ocaml_textfile_concat)
 (synopsis "Textfile concat")
 (description "A program to concat textfiles")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
